--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           </table>
           <br>
           <h2>Riwayat Pendidikan</h2>
+          <div class="table-responsive">
           <table class="table">
             <tr>
               <th scope="col">Tingkat</th>
@@ -126,6 +127,7 @@
               </tr>
             </tbody>
           </table>
+          </div>
           <br>
           <h2>Kemampuan</h2>
           <div class="row">
