--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cv">Curiculum Vitae</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#org">Organization</a>
           </li>
         </ul>
       </div>
@@ -47,128 +59,137 @@
 
     <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cv">
+      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h2>Tentang</h2>
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Nama:</td>
-                <td>Rizqi Mauludin</td>
-              </tr>
-              <tr>
-                <td>Tempat, Tanggal Lahir:</td>
-                <td>Pontianak, 05 Agustus 1995</td>
-              </tr>
-              <tr>
-                <td>Jenis Kelamin:</td>
-                <td>Laki-Laki</td>
-              </tr>
-              <tr>
-                <td>Agama:</td>
-                <td>Islam</td>
-              </tr>
-              <tr>
-                <td>Alamat:</td>
-                <td>Jl. Arteri Supadio Gg. Ringin Sari 3</td>
-              </tr>
-              <tr>
-                <td>Status:</td>
-                <td>Belum Menikah</td>
-              </tr>
-              <tr>
-                <td>Telepon/Hp:</td>
-                <td>08992161506</td>
-              </tr>
-              <tr>
-                <td>Email:</td>
-                <td>rizqiedge.rm@gmail.com</td>
-              </tr>
-              <tr>
-                <td>Pendidikan Terakhir:</td>
-                <td>S1</td>
-              </tr>
-            </tbody>
-          </table>
-          <br>
-          <h2>Riwayat Pendidikan</h2>
-          <table class="table">
-            <tr>
-              <th scope="col">Tingkat</th>
-              <th scope="col">Nama Institusi</th>
-              <th scope="col">Tahun Kelulusan</th>
-              <th scope="col">IPK Akhir/Nilai Ujian Nasional</th>
-            </tr>
-            <tbody>
-              <tr>
-                <td>SD:</td>
-                <td>SDS Pertiwi Pontianak</td>
-                <td>2007</td>
-                <td>8.90</td>
-              </tr>
-              <tr>
-                <td>SMP:</td>
-                <td>SMPN 10 Pontianak</td>
-                <td>2010</td>
-                <td>8.80</td>
-              </tr>
-              <tr>
-                <td>SMA:</td>
-                <td>SMAN 1 Pontianak</td>
-                <td>2013</td>
-                <td>7.80</td>
-              </tr>
-              <tr>
-                <td>Universitas:</td>
-                <td>Fakultas Teknik Program Studi Teknik Informatika Universitas Tanjungpura</td>
-                <td>2017</td>
-                <td>3.61</td>
-              </tr>
-            </tbody>
-          </table>
-          <br>
-          <h2>Kemampuan</h2>
-          <div class="row">
-          <div class="col-sm-4">
-            <div class="subheading">Bahasa Pemrograman</div>
-            <li class="list-inline-item">
-            <i class="devicon-php-plain"></i>
-          </li>
-          PHP<br>
-          <li class="list-inline-item">
-            <i class="devicon-mysql-plain"></i>
-          </li>
-          MYSQL<br>
-          <li class="list-inline-item">
-            <i class="devicon-html5-plain"></i>
-          </li>
-          HTML<br>
-        </div><Br>
-          <div class="col-sm-4">
-          <div class="subheading">Framework</div>
-          <li class="list-inline-item">
-            <i class="devicon-laravel-plain"></i>
-          </li>
-          LARAVEL<br>
-          <li class="list-inline-item">
-            <i class="devicon-codeigniter-plain"></i>
-          </li>
-          CODEIGNITER<br>
-        </div><Br>
-        <div class="col-sm-4">
-        <div class="subheading">Tools</div>
-        <li class="list-inline-item">
-          <i class="devicon-atom-original"></i>
-        </li>
-        ATOM<br>
-      </div>
-    </div><Br><Br>
-      <h2>Pengalaman Kerja</h2>
-      Fresh Graduate<Br><Br><Br>
-      <h2>Pengalaman Organisasi</h2>
-      Humanity Night Project 2014 Fakultas Teknik Universitas Tanjungpura
+          <h1 class="mb-0">Rizqi
+            <span class="text-primary">Mauludin</span>
+          </h1>
+          <div class="subheading mb-5">Jl. Arteri Supadio Gg. Ringin Sari 3, Kubu Raya, Kalimantan Barat · 0899-2161-506 ·
+            <a href="rizqiedge.rm@email.com">rizqiedge.rm@email.com</a>
+          </div>
+        </div>
       </section>
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+        <div class="my-auto">
+          <h2 class="mb-5">Work Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Rent Car Management Application (Desktop)</h3>
+              <div class="subheading mb-3">Coursework</div>
+              <p>This application was create with Pascal programming language and Delphi 7 tools.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Laundry Car Management Application (Desktop)</h3>
+              <div class="subheading mb-3">Coursework</div>
+              <p>This application was create with Pascal programming language and Delphi 7 tools.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Geographic Information System Of Pontianak Gas Station (Website)</h3>
+              <div class="subheading mb-3">Coursework</div>
+              <p>This application was create with PHP, JavaScript CSS programming language and phpMyAdmin tools.</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Jacobs Apparel Website Profil (Website)</h3>
+              <div class="subheading mb-3">Coursework</div>
+              <p>This application was create with Codeigniter Framework (PHP), CSS Programming Language and phpMyAdmin tools.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-auto">
+          <h2 class="mb-5">Education</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Pertiwi Primary School</h3>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2001 - 2007</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior High School Number Ten</h3>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2007 - 2010</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior High School Number One</h3>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2010 - 2013</span>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+        <div class="my-auto">
+          <h2 class="mb-5">Skills</h2>
+
+          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <ul class="list-inline list-icons">
+            <li class="list-inline-item">
+              <i class="devicon-html5-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-css3-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-php-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-javascript-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-csharp-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-atom-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-visualstudio-plain"></i>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="org">
+        <div class="my-auto">
+          <h2 class="mb-5">Organization Experience</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Humanity Night Project 2014 Faculty of Engineering Tanjungpura University</h3>
+              <p>Serving as the person in charge of free medical treatment activity.</p>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">PMKM 2016 Faculty of Engineering Informatics Major Tanjungpura University</h3>
+              <p>As plantation coordinator.</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <!-- Bootstrap core JavaScript -->
