--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Geographic Information System Of Pontianak Gas Station (Website)</h3>
               <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with PHP, JavaScript CSS programming language and phpMyAdmin tools.</p>
+              <p>This application was create with PHP, JavaScript CSS programming Language and phpMyAdmin tools.</p>
             </div>
           </div>
 
@@ -144,97 +144,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-<<<<<<< HEAD
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
-=======
-          <h2>Tentang</h2>
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Nama:</td>
-                <td>Rizqi Mauludin</td>
-              </tr>
-              <tr>
-                <td>Tempat, Tanggal Lahir:</td>
-                <td>Pontianak, 05 Agustus 1995</td>
-              </tr>
-              <tr>
-                <td>Jenis Kelamin:</td>
-                <td>Laki-Laki</td>
-              </tr>
-              <tr>
-                <td>Agama:</td>
-                <td>Islam</td>
-              </tr>
-              <tr>
-                <td>Alamat:</td>
-                <td>Jl. Arteri Supadio Gg. Ringin Sari 3</td>
-              </tr>
-              <tr>
-                <td>Status:</td>
-                <td>Belum Menikah</td>
-              </tr>
-              <tr>
-                <td>Telepon/Hp:</td>
-                <td>08992161506</td>
-              </tr>
-              <tr>
-                <td>Email:</td>
-                <td>rizqiedge.rm@gmail.com</td>
-              </tr>
-              <tr>
-                <td>Pendidikan Terakhir:</td>
-                <td>S1</td>
-              </tr>
-            </tbody>
-          </table>
-          <br>
-          <h2>Riwayat Pendidikan</h2>
-          <div class="table-responsive">
-          <table class="table">
-            <tr>
-              <th scope="col">Tingkat</th>
-              <th scope="col">Nama Institusi</th>
-              <th scope="col">Tahun Kelulusan</th>
-              <th scope="col">IPK Akhir/Nilai Ujian Nasional</th>
-            </tr>
-            <tbody>
-              <tr>
-                <td>SD:</td>
-                <td>SDS Pertiwi Pontianak</td>
-                <td>2007</td>
-                <td>8.90</td>
-              </tr>
-              <tr>
-                <td>SMP:</td>
-                <td>SMPN 10 Pontianak</td>
-                <td>2010</td>
-                <td>8.80</td>
-              </tr>
-              <tr>
-                <td>SMA:</td>
-                <td>SMAN 1 Pontianak</td>
-                <td>2013</td>
-                <td>7.80</td>
-              </tr>
-              <tr>
-                <td>Universitas:</td>
-                <td>Fakultas Teknik Program Studi Teknik Informatika Universitas Tanjungpura</td>
-                <td>2017</td>
-                <td>3.61</td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-          <br>
-          <h2>Kemampuan</h2>
-          <div class="row">
-          <div class="col-sm-4">
-            <div class="subheading">Bahasa Pemrograman</div>
->>>>>>> 0512648aa9f3b7b1665af626cc8f464a3d8f620e
             <li class="list-inline-item">
               <i class="devicon-html5-plain"></i>
             </li>
