--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Geographic Information System Of Pontianak Gas Station (Website)</h3>
               <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with PHP, JavaScript CSS programming Language and phpMyAdmin tools.</p>
+              <p>This application was create with PHP, JavaScript, CSS programming Language and phpMyAdmin tools.</p>
             </div>
           </div>
 
@@ -136,6 +136,15 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2010 - 2013</span>
+            </div>
+          </div>
+          
+           <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Faculty Of Engineering, Informatics Major, Tanjungpura University</h3>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2013 - 2017</span>
             </div>
           </div>
 
