--- a/index.html
+++ b/index.html
@@ -67,44 +67,49 @@
           <div class="subheading mb-5">Jl. Arteri Supadio Gg. Ringin Sari 3, Kubu Raya, Kalimantan Barat · 0899-2161-506 ·
             <a href="rizqiedge.rm@email.com">rizqiedge.rm@email.com</a>
           </div>
+          <p class="mb-5">I am someone who specializing in front and back end development websites. Have done numerous projects involving some platform like website, dsktop and mobile.</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Work Experience</h2>
+          <h2 class="mb-5">Programming Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Rent Car Management Application (Desktop)</h3>
-              <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with Pascal programming language and Delphi 7 tools.</p>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Laundry Car Management Application (Desktop)</h3>
-              <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with Pascal programming language and Delphi 7 tools.</p>
+              <h3 class="mb-0">Rent Car Management Application</h3>
+              <div class="subheading mb-3">Desktop</div>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Geographic Information System Of Pontianak Gas Station (Website)</h3>
-              <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with PHP, JavaScript CSS programming Language and phpMyAdmin tools.</p>
+              <h3 class="mb-0">Laundry Car Management Application</h3>
+              <div class="subheading mb-3">Desktop</div>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Jacobs Apparel Website Profil (Website)</h3>
-              <div class="subheading mb-3">Coursework</div>
-              <p>This application was create with Codeigniter Framework (PHP), CSS Programming Language and phpMyAdmin tools.</p>
+              <h3 class="mb-0">Geographic Information System Of Pontianak Gas Station</h3>
+              <div class="subheading mb-3">Website</div>
             </div>
           </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Jacobs Apparel Website Profil</h3>
+              <div class="subheading mb-3">Website</div>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Learning Media Application of Human Digestive System with Augmented Reality</h3>
+              <div class="subheading mb-3">Android</div>
+            </div>
+          </div>
+
         </div>
       </section>
 
