--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#service">Service</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
@@ -67,7 +70,52 @@
           <div class="subheading mb-5">Jl. Arteri Supadio Gg. Ringin Sari 3, Kubu Raya, Kalimantan Barat · 0899-2161-506 ·
             <a href="rizqiedge.rm@email.com">rizqiedge.rm@email.com</a>
           </div>
-          <p class="mb-5">I am someone who specializing in front and back end development websites. Have done numerous projects involving some platform like website, dsktop and mobile.</p>
+          <p class="mb-5">I am someone who specializing in front and back end development websites. Have done numerous projects involving some platform like website, desktop and mobile.</p>
+          <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/rizzqi.mauludin">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://plus.google.com/u/0/106858372445502764305">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-google fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/rizqimauludin/">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="service">
+        <div class="my-auto">
+          <h2 class="mb-5">Services</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Developed Any Kind Of Website</h3>
+              <div class="subheading mb-3">
+              - Website Profil of a Company / Personal <br>
+              - News Portal <br>
+              - Web Based Management System <br>
+              - Geographic Information System <br>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
 
@@ -143,7 +191,7 @@
               <span class="text-primary">2010 - 2013</span>
             </div>
           </div>
-          
+
            <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Faculty Of Engineering, Informatics Major, Tanjungpura University</h3>
